--- a/Safari Extension CORS Extension/Resources/popup.html
+++ b/Safari Extension CORS Extension/Resources/popup.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/slds/slds.css">
     <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="flags.css">
+    <script src="react.js"></script>
+    <script src="react-dom.js"></script>
     <script type="module" src="popup.js"></script>
-</head>
-<body>
-    <strong>Hello World!</strong>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
+ 
